test/should-fail/vsgc4173a.visage
/**
 * Regress test for VSGC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=onreplace
 * @compile vsgc4173sub.visage
 * @test/warning
 */
